--- a/framed-animation-html.html
+++ b/framed-animation-html.html
@@ -13,7 +13,7 @@ function move(){
 
   function frame(){
 
-    var color = new Array('blue', 'red', 'orange', 'green', 'black');
+    var color = new Array('blue', 'red', 'orange', 'green', 'purple');
     background++;
     
     for(var i = 0; i < color.length; i++){
