Commit Coding Map

--- a/GoogleMapApiProject/index.html
+++ b/GoogleMapApiProject/index.html
@@ -11,31 +11,20 @@
 		<ul class="location">
 			<li>
 				<div>
-					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8"><h3 class="storeName">Watch Store</h3><span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span></a>
+					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8">
+					<h3 class="storeName">Simon Fraser University Downtown Campus</h3>
+					<span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span>
+					<input type="hidden" class="info" value="erw">
+					</a>
 				</div>
 			</li>
 			<li>
 				<div>
-					<a class="locationStore" value="131 W Hastings St #810, Vancouver, BC V6B 0G9"><h3 class="storeName">Watch Store</h3><span class="storeAddress">131 W Hastings St #810, Vancouver, BC V6B 0G9 </span></a>
-				</div>
-			</li>
-			<li><div>
-					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8"><h3 class="storeName">Watch Store</h3><span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span></a>
-				</div>
-			</li>
-			<li>
-				<div>
-					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8"><h3 class="storeName">Watch Store</h3><span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span></a>
-				</div>
-			</li>
-			<li>
-				<div>
-					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8"><h3 class="storeName">Watch Store</h3><span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span></a>
-				</div>
-			</li>
-			<li>
-				<div>
-					<a class="locationStore" value="233 Robson St, Vancouver BC V6B0E8"><h3 class="storeName">Watch Store</h3><span class="storeAddress">233 Robson St, Vancouver BC V6B0E8</span></a>
+					<a class="locationStore" value="3700 Willingdon Ave, Burnaby, BC V5G 3H2">
+					<h3 class="storeName">BCIT Burnaby Campus</h3>
+					<span class="storeAddress">3700 Willingdon Ave, Burnaby, BC V5G 3H2BCIT Burnaby Campus</span>
+					<input type="hidden" class="info" value="weqew">
+					</a>
 				</div>
 			</li>
 		</ul>
