--- a/Angular/02-Controllers/02-Controllers.html
+++ b/Angular/02-Controllers/02-Controllers.html
@@ -3,7 +3,7 @@
 <body>
 <script src="main.js" type="text/javascript"></script>
 <div ng-app="">
-	<div ng-controller="firstCtrl"> <!-- to get firstCtrl from main.js-->
+	<div ng:controller="firstCtrl"> <!-- to get firstCtrl from main.js-->
 		<h1>Hello {{data.panel}}</h1>
 		<h1>Hello {{data.panelTwo}}</h1>
 	</div>
